parser/src/generated/java/com/aaroncoplan/waterfall/WaterfallParser.java
// Generated from com/aaroncoplan/waterfall/Waterfall.g4 by ANTLR 4.7.1
package com.aaroncoplan.waterfall;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WaterfallParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT=1, DEC=2, CHAR=3, BOOL=4, CONST=5, FINAL=6, AND=7, OR=8, CHECK_EQUAL=9, 
		IF=10, ELSE=11, ELIF=12, MODULE=13, TYPE=14, SPEC=15, FUNC=16, RETURN=17, 
		RETURNS=18, ID=19, INT_LITERAL=20, DEC_LITERAL=21, DOT=22, COLON_EQUALS=23, 
		EQUALS=24, DIVIDE=25, MULTIPLY=26, ADD=27, SUBTRACT=28, MOD=29, POW=30, 
		LESS_THAN=31, GREATER_THAN=32, LESS_THAN_EQUALS=33, GREATER_THAN_EQUALS=34, 
		LEFT_PARENS=35, RIGHT_PARENS=36, LEFT_CURLY=37, RIGHT_CURLY=38, COMMA=39, 
		NEWLINE=40, WS=41;
	public static final int
		RULE_program = 0, RULE_module = 1, RULE_type = 2, RULE_spec = 3, RULE_variable_declaration = 4, 
		RULE_typed_variable_declaration_and_assignment = 5, RULE_inferred_variable_declaration_and_assignment = 6, 
		RULE_function_signature = 7, RULE_function_declaration = 8, RULE_return_type = 9, 
		RULE_code_block = 10, RULE_block_child = 11, RULE_return_statement = 12, 
		RULE_variable_assignment = 13, RULE_conditional = 14, RULE_if_statement = 15, 
		RULE_elif_statement = 16, RULE_else_statement = 17, RULE_function_call_positional_args = 18, 
		RULE_named_arg = 19, RULE_function_call_named_args = 20, RULE_variable_type = 21, 
		RULE_modifier = 22, RULE_math_operator = 23, RULE_value = 24, RULE_assignment_right_hand = 25, 
		RULE_comparator = 26, RULE_comparison = 27, RULE_condition = 28, RULE_newline_s = 29;
	public static final String[] ruleNames = {
		"program", "module", "type", "spec", "variable_declaration", "typed_variable_declaration_and_assignment", 
		"inferred_variable_declaration_and_assignment", "function_signature", 
		"function_declaration", "return_type", "code_block", "block_child", "return_statement", 
		"variable_assignment", "conditional", "if_statement", "elif_statement", 
		"else_statement", "function_call_positional_args", "named_arg", "function_call_named_args", 
		"variable_type", "modifier", "math_operator", "value", "assignment_right_hand", 
		"comparator", "comparison", "condition", "newline_s"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'int'", "'dec'", "'char'", "'bool'", "'const'", "'final'", "'and'", 
		"'or'", "'equals'", "'if'", "'else'", "'elif'", "'module'", "'type'", 
		"'spec'", "'func'", "'return'", "'returns'", null, null, null, "'.'", 
		"':='", "'='", "'/'", "'*'", "'+'", "'-'", "'%'", "'^'", "'<'", "'>'", 
		"'<='", "'>='", "'('", "')'", "'{'", "'}'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INT", "DEC", "CHAR", "BOOL", "CONST", "FINAL", "AND", "OR", "CHECK_EQUAL", 
		"IF", "ELSE", "ELIF", "MODULE", "TYPE", "SPEC", "FUNC", "RETURN", "RETURNS", 
		"ID", "INT_LITERAL", "DEC_LITERAL", "DOT", "COLON_EQUALS", "EQUALS", "DIVIDE", 
		"MULTIPLY", "ADD", "SUBTRACT", "MOD", "POW", "LESS_THAN", "GREATER_THAN", 
		"LESS_THAN_EQUALS", "GREATER_THAN_EQUALS", "LEFT_PARENS", "RIGHT_PARENS", 
		"LEFT_CURLY", "RIGHT_CURLY", "COMMA", "NEWLINE", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Waterfall.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WaterfallParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(WaterfallParser.EOF, 0); }
		public ModuleContext module() {
			return getRuleContext(ModuleContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public SpecContext spec() {
			return getRuleContext(SpecContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MODULE:
				{
				setState(60);
				module();
				}
				break;
			case TYPE:
				{
				setState(61);
				type();
				}
				break;
			case SPEC:
				{
				setState(62);
				spec();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(65);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode MODULE() { return getToken(WaterfallParser.MODULE, 0); }
		public TerminalNode ID() { return getToken(WaterfallParser.ID, 0); }
		public TerminalNode LEFT_CURLY() { return getToken(WaterfallParser.LEFT_CURLY, 0); }
		public List<Newline_sContext> newline_s() {
			return getRuleContexts(Newline_sContext.class);
		}
		public Newline_sContext newline_s(int i) {
			return getRuleContext(Newline_sContext.class,i);
		}
		public TerminalNode RIGHT_CURLY() { return getToken(WaterfallParser.RIGHT_CURLY, 0); }
		public List<Variable_declarationContext> variable_declaration() {
			return getRuleContexts(Variable_declarationContext.class);
		}
		public Variable_declarationContext variable_declaration(int i) {
			return getRuleContext(Variable_declarationContext.class,i);
		}
		public List<Function_declarationContext> function_declaration() {
			return getRuleContexts(Function_declarationContext.class);
		}
		public Function_declarationContext function_declaration(int i) {
			return getRuleContext(Function_declarationContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).exitModule(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(MODULE);
			setState(68);
			match(ID);
			setState(69);
			match(LEFT_CURLY);
			setState(70);
			newline_s();
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << DEC) | (1L << CHAR) | (1L << BOOL) | (1L << CONST) | (1L << FINAL) | (1L << ID))) != 0)) {
				{
				{
				setState(71);
				variable_declaration();
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNC) {
				{
				{
				setState(77);
				function_declaration();
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(83);
			match(RIGHT_CURLY);
			setState(84);
			newline_s();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(WaterfallParser.TYPE, 0); }
		public TerminalNode ID() { return getToken(WaterfallParser.ID, 0); }
		public TerminalNode LEFT_CURLY() { return getToken(WaterfallParser.LEFT_CURLY, 0); }
		public List<Newline_sContext> newline_s() {
			return getRuleContexts(Newline_sContext.class);
		}
		public Newline_sContext newline_s(int i) {
			return getRuleContext(Newline_sContext.class,i);
		}
		public TerminalNode RIGHT_CURLY() { return getToken(WaterfallParser.RIGHT_CURLY, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(TYPE);
			setState(87);
			match(ID);
			setState(88);
			match(LEFT_CURLY);
			setState(89);
			newline_s();
			setState(90);
			match(RIGHT_CURLY);
			setState(91);
			newline_s();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpecContext extends ParserRuleContext {
		public TerminalNode SPEC() { return getToken(WaterfallParser.SPEC, 0); }
		public TerminalNode ID() { return getToken(WaterfallParser.ID, 0); }
		public TerminalNode LEFT_CURLY() { return getToken(WaterfallParser.LEFT_CURLY, 0); }
		public List<Newline_sContext> newline_s() {
			return getRuleContexts(Newline_sContext.class);
		}
		public Newline_sContext newline_s(int i) {
			return getRuleContext(Newline_sContext.class,i);
		}
		public TerminalNode RIGHT_CURLY() { return getToken(WaterfallParser.RIGHT_CURLY, 0); }
		public List<Function_signatureContext> function_signature() {
			return getRuleContexts(Function_signatureContext.class);
		}
		public Function_signatureContext function_signature(int i) {
			return getRuleContext(Function_signatureContext.class,i);
		}
		public SpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).enterSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).exitSpec(this);
		}
	}

	public final SpecContext spec() throws RecognitionException {
		SpecContext _localctx = new SpecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_spec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(SPEC);
			setState(94);
			match(ID);
			setState(95);
			match(LEFT_CURLY);
			setState(96);
			newline_s();
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNC) {
				{
				{
				setState(97);
				function_signature();
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			match(RIGHT_CURLY);
			setState(104);
			newline_s();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_declarationContext extends ParserRuleContext {
		public Typed_variable_declaration_and_assignmentContext typed_variable_declaration_and_assignment() {
			return getRuleContext(Typed_variable_declaration_and_assignmentContext.class,0);
		}
		public Inferred_variable_declaration_and_assignmentContext inferred_variable_declaration_and_assignment() {
			return getRuleContext(Inferred_variable_declaration_and_assignmentContext.class,0);
		}
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).enterVariable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).exitVariable_declaration(this);
		}
	}

	public final Variable_declarationContext variable_declaration() throws RecognitionException {
		Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variable_declaration);
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				typed_variable_declaration_and_assignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				inferred_variable_declaration_and_assignment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Typed_variable_declaration_and_assignmentContext extends ParserRuleContext {
		public Variable_typeContext variable_type() {
			return getRuleContext(Variable_typeContext.class,0);
		}
		public TerminalNode ID() { return getToken(WaterfallParser.ID, 0); }
		public TerminalNode EQUALS() { return getToken(WaterfallParser.EQUALS, 0); }
		public Assignment_right_handContext assignment_right_hand() {
			return getRuleContext(Assignment_right_handContext.class,0);
		}
		public Newline_sContext newline_s() {
			return getRuleContext(Newline_sContext.class,0);
		}
		public ModifierContext modifier() {
			return getRuleContext(ModifierContext.class,0);
		}
		public Typed_variable_declaration_and_assignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typed_variable_declaration_and_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).enterTyped_variable_declaration_and_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).exitTyped_variable_declaration_and_assignment(this);
		}
	}

	public final Typed_variable_declaration_and_assignmentContext typed_variable_declaration_and_assignment() throws RecognitionException {
		Typed_variable_declaration_and_assignmentContext _localctx = new Typed_variable_declaration_and_assignmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typed_variable_declaration_and_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONST || _la==FINAL) {
				{
				setState(110);
				modifier();
				}
			}

			setState(113);
			variable_type();
			setState(114);
			match(ID);
			setState(115);
			match(EQUALS);
			setState(116);
			assignment_right_hand();
			setState(117);
			newline_s();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Inferred_variable_declaration_and_assignmentContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(WaterfallParser.ID, 0); }
		public TerminalNode COLON_EQUALS() { return getToken(WaterfallParser.COLON_EQUALS, 0); }
		public Assignment_right_handContext assignment_right_hand() {
			return getRuleContext(Assignment_right_handContext.class,0);
		}
		public Newline_sContext newline_s() {
			return getRuleContext(Newline_sContext.class,0);
		}
		public ModifierContext modifier() {
			return getRuleContext(ModifierContext.class,0);
		}
		public Inferred_variable_declaration_and_assignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inferred_variable_declaration_and_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).enterInferred_variable_declaration_and_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).exitInferred_variable_declaration_and_assignment(this);
		}
	}

	public final Inferred_variable_declaration_and_assignmentContext inferred_variable_declaration_and_assignment() throws RecognitionException {
		Inferred_variable_declaration_and_assignmentContext _localctx = new Inferred_variable_declaration_and_assignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_inferred_variable_declaration_and_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONST || _la==FINAL) {
				{
				setState(119);
				modifier();
				}
			}

			setState(122);
			match(ID);
			setState(123);
			match(COLON_EQUALS);
			setState(124);
			assignment_right_hand();
			setState(125);
			newline_s();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_signatureContext extends ParserRuleContext {
		public TerminalNode FUNC() { return getToken(WaterfallParser.FUNC, 0); }
		public List<TerminalNode> ID() { return getTokens(WaterfallParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(WaterfallParser.ID, i);
		}
		public TerminalNode LEFT_PARENS() { return getToken(WaterfallParser.LEFT_PARENS, 0); }
		public TerminalNode RIGHT_PARENS() { return getToken(WaterfallParser.RIGHT_PARENS, 0); }
		public Newline_sContext newline_s() {
			return getRuleContext(Newline_sContext.class,0);
		}
		public List<Variable_typeContext> variable_type() {
			return getRuleContexts(Variable_typeContext.class);
		}
		public Variable_typeContext variable_type(int i) {
			return getRuleContext(Variable_typeContext.class,i);
		}
		public Return_typeContext return_type() {
			return getRuleContext(Return_typeContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(WaterfallParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(WaterfallParser.COMMA, i);
		}
		public Function_signatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_signature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).enterFunction_signature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).exitFunction_signature(this);
		}
	}

	public final Function_signatureContext function_signature() throws RecognitionException {
		Function_signatureContext _localctx = new Function_signatureContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_function_signature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(FUNC);
			setState(128);
			match(ID);
			setState(129);
			match(LEFT_PARENS);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << DEC) | (1L << CHAR) | (1L << BOOL) | (1L << ID))) != 0)) {
				{
				setState(130);
				variable_type();
				setState(131);
				match(ID);
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(132);
					match(COMMA);
					setState(133);
					variable_type();
					setState(134);
					match(ID);
					}
					}
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(143);
			match(RIGHT_PARENS);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURNS) {
				{
				setState(144);
				return_type();
				}
			}

			setState(147);
			newline_s();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_declarationContext extends ParserRuleContext {
		public TerminalNode FUNC() { return getToken(WaterfallParser.FUNC, 0); }
		public List<TerminalNode> ID() { return getTokens(WaterfallParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(WaterfallParser.ID, i);
		}
		public TerminalNode LEFT_PARENS() { return getToken(WaterfallParser.LEFT_PARENS, 0); }
		public TerminalNode RIGHT_PARENS() { return getToken(WaterfallParser.RIGHT_PARENS, 0); }
		public TerminalNode LEFT_CURLY() { return getToken(WaterfallParser.LEFT_CURLY, 0); }
		public List<Newline_sContext> newline_s() {
			return getRuleContexts(Newline_sContext.class);
		}
		public Newline_sContext newline_s(int i) {
			return getRuleContext(Newline_sContext.class,i);
		}
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public TerminalNode RIGHT_CURLY() { return getToken(WaterfallParser.RIGHT_CURLY, 0); }
		public List<Variable_typeContext> variable_type() {
			return getRuleContexts(Variable_typeContext.class);
		}
		public Variable_typeContext variable_type(int i) {
			return getRuleContext(Variable_typeContext.class,i);
		}
		public Return_typeContext return_type() {
			return getRuleContext(Return_typeContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(WaterfallParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(WaterfallParser.COMMA, i);
		}
		public Function_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).enterFunction_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).exitFunction_declaration(this);
		}
	}

	public final Function_declarationContext function_declaration() throws RecognitionException {
		Function_declarationContext _localctx = new Function_declarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_function_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(FUNC);
			setState(150);
			match(ID);
			setState(151);
			match(LEFT_PARENS);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << DEC) | (1L << CHAR) | (1L << BOOL) | (1L << ID))) != 0)) {
				{
				setState(152);
				variable_type();
				setState(153);
				match(ID);
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(154);
					match(COMMA);
					setState(155);
					variable_type();
					setState(156);
					match(ID);
					}
					}
					setState(162);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(165);
			match(RIGHT_PARENS);
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURNS) {
				{
				setState(166);
				return_type();
				}
			}

			setState(169);
			match(LEFT_CURLY);
			setState(170);
			newline_s();
			setState(171);
			code_block();
			setState(172);
			match(RIGHT_CURLY);
			setState(173);
			newline_s();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Return_typeContext extends ParserRuleContext {
		public TerminalNode RETURNS() { return getToken(WaterfallParser.RETURNS, 0); }
		public Variable_typeContext variable_type() {
			return getRuleContext(Variable_typeContext.class,0);
		}
		public Return_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).enterReturn_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WaterfallListener ) ((WaterfallListener)listener).exitReturn_type(this);
		}
	}

	public final Return_typeContext return_type() throws RecognitionException {
		Return_typeContext _localctx = new Return_typeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_return_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(RETURNS);
			setState(176);
			variable_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
